--- a/src/main/resources/co/cloudify/jenkins/plugin/CreateEnvironmentBuildStep/help-outputFile.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/CreateEnvironmentBuildStep/help-outputFile.html
@@ -1,10 +1,10 @@
 <div>
 	<p>Name of file into which the deployment's outputs and capabilities will be written. The file will
 	be a JSON, adhering to the following format:</p>
-	<code>
-	{
-		"outputs": <outputs_dictionary>,
-		"capabilities": <capabilities_dictionary>
-	}
-	</code>
+	<pre>
+{
+    "outputs": &lt;outputs_dictionary&gt;,
+    "capabilities": &lt;capabilities_dictionary&gt;
+}
+	</pre>
 </div>
