--- a/src/main/resources/co/cloudify/jenkins/plugin/CreateEnvironmentBuildStep/help-inputsFile.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/CreateEnvironmentBuildStep/help-inputsFile.html
@@ -1,4 +1,4 @@
 <div>
-	<p>A JSON file containing inputs for the deployment. These inputs will be merged
-	with inputs provided through the "inputs" parameter.</p>
+	<p>A path (relative to the workspace root) to a JSON file containing inputs for the deployment.
+	These inputs will be merged with inputs provided through the "inputs" parameter.</p>
 </div>
