--- a/src/main/resources/co/cloudify/jenkins/plugin/CreateEnvironmentBuildStep/help-inputs.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/CreateEnvironmentBuildStep/help-inputs.html
@@ -1,4 +1,4 @@
 <div>
-	<p>A JSON containing inputs for the deployment. These inputs will be merged
-	with inputs provided through the "inputs file" parameter.</p>
+	<p>A YAML/JSON containing inputs for the deployment. These inputs will be merged
+	with inputs provided through the "<code>inputs file</code>" parameter.</p>
 </div>
