--- a/src/main/resources/co/cloudify/jenkins/plugin/CloudifyBuildWrapper/help-outputsLocation.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/CloudifyBuildWrapper/help-outputsLocation.html
@@ -1,4 +1,5 @@
 <div>
-	<p>A path, relative to the workspace's root, to a JSON file that will contain the outputs and capabilities of the new deployment.</p>
-	<p>If not provided, the file won't be created.</p>
+    <p>A path, relative to the workspace's root, to a JSON file that will contain the outputs and capabilities of
+        the new deployment.</p>
+    <p>If not provided, the file won't be created.</p>
 </div>
