--- a/src/main/resources/co/cloudify/jenkins/plugin/CloudifyBuildWrapper/help.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/CloudifyBuildWrapper/help.html
@@ -1,7 +1,8 @@
 <div>
-	<p>Applies a Cloudify "Wrapper" around this job:<p>
-	<ul>
-		<li>A Cloudify deployment will be created at the beginning of the job.</li>
-		<li>The deployment will be torn down at the end of the job.</li>
-	</ul>
+    <p>Applies a Cloudify "Wrapper" around this job:
+    <p>
+    <ul>
+        <li>A Cloudify deployment will be created at the beginning of the job.</li>
+        <li>The deployment will be torn down at the end of the job.</li>
+    </ul>
 </div>
