--- a/src/main/resources/co/cloudify/jenkins/plugin/CreateEnvironmentBuildStep/help-inputs.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/CreateEnvironmentBuildStep/help-inputs.html
@@ -1,4 +1,7 @@
 <div>
-	<p>A YAML/JSON containing inputs for the deployment. These inputs will be merged
-	with inputs provided through the "<code>inputs file</code>" parameter.</p>
+    <p>
+        A YAML/JSON containing inputs for the deployment. These inputs will be merged with inputs provided through the "
+        <code>inputs file</code>
+        " parameter.
+    </p>
 </div>
