--- a/src/main/resources/co/cloudify/jenkins/plugin/CreateEnvironmentBuildStep/help-inputsFile.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/CreateEnvironmentBuildStep/help-inputsFile.html
@@ -1,4 +1,8 @@
 <div>
-	<p>A path (relative to the workspace root) to a YAML/JSON file containing inputs for the deployment.
-	These inputs will be merged with inputs provided through the "<code>inputs</code>" parameter.</p>
+    <p>
+        A path (relative to the workspace root) to a YAML/JSON file containing inputs for the deployment. These inputs
+        will be merged with inputs provided through the "
+        <code>inputs</code>
+        " parameter.
+    </p>
 </div>
