--- a/src/main/resources/co/cloudify/jenkins/plugin/CreateEnvironmentBuildStep/help.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/CreateEnvironmentBuildStep/help.html
@@ -1,8 +1,14 @@
 <div>
-	<p>Creates a topology from an environment blueprint.</p>
-	<p>The "Output File" parameter denotes where the new environment's outputs will be written to. Later build steps
-	can inspect this file in order to grab information pertinent to them (such as IP addresses, user names and so forth).</p>
-	<p>All input fields support standard Jenkins parameters' expansion. For example, the string <code>${app_name}</code> will be
-	expanded, in runtime, to the value of a build parameter called <code>app_name</code>.</p>
-	<p>For explanation about the format of the outputs file, refer to the help tooltip for that parameter.</p>
+    <p>Creates a topology from an environment blueprint.</p>
+    <p>The "Output File" parameter denotes where the new environment's outputs will be written to. Later build steps
+        can inspect this file in order to grab information pertinent to them (such as IP addresses, user names and so
+        forth).</p>
+    <p>
+        All input fields support standard Jenkins parameters' expansion. For example, the string
+        <code>${app_name}</code>
+        will be expanded, in runtime, to the value of a build parameter called
+        <code>app_name</code>
+        .
+    </p>
+    <p>For explanation about the format of the outputs file, refer to the help tooltip for that parameter.</p>
 </div>
