--- a/src/main/resources/co/cloudify/jenkins/plugin/DeleteBlueprintBuildStep/help.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/DeleteBlueprintBuildStep/help.html
@@ -1,3 +1,1 @@
-<div>
-	Use this step to delete a Cloudify blueprint from Cloudify Manager.
-</div>
+<div>Use this step to delete a Cloudify blueprint from Cloudify Manager.</div>
