--- a/src/main/resources/co/cloudify/jenkins/plugin/ExecuteWorkflowBuildStep/help-waitForCompletion.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/ExecuteWorkflowBuildStep/help-waitForCompletion.html
@@ -1,4 +1,2 @@
-<div>
-	If checked, then the build waits for the execution to finish.
-	If the execution ends in any way other than success, the build step will fail.
-</div>
+<div>If checked, then the build waits for the execution to finish. If the execution ends in any way other than
+    success, the build step will fail.</div>
