--- a/src/main/resources/co/cloudify/jenkins/plugin/OutputsToInputsBuildStep/help-outputsLocation.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/OutputsToInputsBuildStep/help-outputsLocation.html
@@ -1,7 +1,7 @@
 <div>
-	<p>Location of the outputs JSON file, containing outputs and capabilities of another deployment.
-	The file must be in the following format:</p>
-	<pre>
+    <p>Location of the outputs JSON file, containing outputs and capabilities of another deployment. The file must
+        be in the following format:</p>
+    <pre>
 {
     "outputs": {
     	"&lt;output_name&gt;": "&lt;output_value&gt;",
