--- a/src/main/resources/co/cloudify/jenkins/plugin/UploadBlueprintBuildStep/help-archivePath.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/UploadBlueprintBuildStep/help-archivePath.html
@@ -1,3 +1,1 @@
-<div>
-	Path (relative to the workspace root) of the blueprint archive.
-</div>
+<div>Path (relative to the workspace root) of the blueprint archive.</div>
