--- a/src/main/resources/co/cloudify/jenkins/plugin/UploadBlueprintBuildStep/help-mainFileName.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/UploadBlueprintBuildStep/help-mainFileName.html
@@ -1,3 +1,1 @@
-<div>
-	Name of the YAML file containing the main entry point to the blueprint.
-</div>
+<div>Name of the YAML file containing the main entry point to the blueprint.</div>
