--- a/src/main/resources/co/cloudify/jenkins/plugin/UploadBlueprintBuildStep/help.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/UploadBlueprintBuildStep/help.html
@@ -1,16 +1,17 @@
 <div>
-	<p>Use this step to upload a blueprint to Cloudify Manager.</p>
-	<p>Two paramters are mandatory:</p>
-	<ul>
-		<li>Blueprint ID</li>
-		<li>Main blueprint file name</li>
-	</ul>
-	<p>In addition, exactly one of the following parameters is mandatory:</p>
-	<ul>
-		<li>Blueprint archive path</li>
-		<li>Blueprint archive URL</li>
-		<li>Blueprint's root directory<li>
-	</ul>
-	<p>If you provide a blueprint's root directory, then the entire directory contents are
-	packaged into a blueprint archive.</p>
+    <p>Use this step to upload a blueprint to Cloudify Manager.</p>
+    <p>Two paramters are mandatory:</p>
+    <ul>
+        <li>Blueprint ID</li>
+        <li>Main blueprint file name</li>
+    </ul>
+    <p>In addition, exactly one of the following parameters is mandatory:</p>
+    <ul>
+        <li>Blueprint archive path</li>
+        <li>Blueprint archive URL</li>
+        <li>Blueprint's root directory
+        <li>
+    </ul>
+    <p>If you provide a blueprint's root directory, then the entire directory contents are packaged into a blueprint
+        archive.</p>
 </div>
