--- a/src/main/resources/co/cloudify/jenkins/plugin/UploadPluginBuildStep/help-outputLocation.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/UploadPluginBuildStep/help-outputLocation.html
@@ -1,3 +1,1 @@
-<div>
-	Location where the plugin information, in JSON format, will be stored.
-</div>
+<div>Location where the plugin information, in JSON format, will be stored.</div>
