--- a/src/main/resources/co/cloudify/jenkins/plugin/UploadPluginBuildStep/help-yamlLocation.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/UploadPluginBuildStep/help-yamlLocation.html
@@ -1,3 +1,5 @@
 <div>
-	URL of the <code>plugin.yaml</code> file of the plugin.
+    URL of the
+    <code>plugin.yaml</code>
+    file of the plugin.
 </div>
