--- a/src/main/resources/co/cloudify/jenkins/plugin/parameters/BlueprintInputConstraintSelector/help.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/parameters/BlueprintInputConstraintSelector/help.html
@@ -1,5 +1,8 @@
 <div>
-	<p>Automatically renders a list of valid choices for a blueprint input.</p>
-	<p>For this parameter type to work, the inquired blueprint input must have exactly one
-	constraint of type "<code>valid_values</code>".</p>
+    <p>Automatically renders a list of valid choices for a blueprint input.</p>
+    <p>
+        For this parameter type to work, the inquired blueprint input must have exactly one constraint of type "
+        <code>valid_values</code>
+        ".
+    </p>
 </div>
