--- a/src/main/resources/co/cloudify/jenkins/plugin/CreateEnvironmentBuildStep/help-echoOutputs.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/CreateEnvironmentBuildStep/help-echoOutputs.html
@@ -1,3 +1,1 @@
-<div>
-	At the end of the build step, print the outputs and capabilities to the console.
-</div>
+<div>At the end of the build step, print the outputs and capabilities to the console.</div>
