--- a/src/main/resources/co/cloudify/jenkins/plugin/ExecuteWorkflowBuildStep/help-debugOutput.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/ExecuteWorkflowBuildStep/help-debugOutput.html
@@ -1,3 +1,1 @@
-<div>
-	If checked, then printed Cloudify events and logs will include debug-level records.
-</div>
+<div>If checked, then printed Cloudify events and logs will include debug-level records.</div>
