--- a/src/main/resources/co/cloudify/jenkins/plugin/OutputsToInputsBuildStep/help-mappingLocation.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/OutputsToInputsBuildStep/help-mappingLocation.html
@@ -1,4 +1,4 @@
 <div>
-	<p>A JSON containing mapping between outputs/capabilities and inputs. For information about the
-	structure, refer to the tooltip of this build step.</p>
+    <p>A JSON containing mapping between outputs/capabilities and inputs. For information about the structure, refer
+        to the tooltip of this build step.</p>
 </div>
