--- a/src/main/resources/co/cloudify/jenkins/plugin/UploadPluginBuildStep/help.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/UploadPluginBuildStep/help.html
@@ -1,3 +1,1 @@
-<div>
-	Use this step to upload a plugin to Cloudify Manager.
-</div>
+<div>Use this step to upload a plugin to Cloudify Manager.</div>
