--- a/src/main/resources/co/cloudify/jenkins/plugin/parameters/BlueprintInputConstraintSelector/help-blueprintId.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/parameters/BlueprintInputConstraintSelector/help-blueprintId.html
@@ -1,3 +1,1 @@
-<div>
-	The ID of the blueprint of which input we want to inquire.
-</div>
+<div>The ID of the blueprint of which input we want to inquire.</div>
