--- a/src/main/resources/co/cloudify/jenkins/plugin/parameters/BlueprintInputConstraintSelector/help-name.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/parameters/BlueprintInputConstraintSelector/help-name.html
@@ -1,3 +1,1 @@
-<div>
-	The name of the variable to contain the selected value.
-</div>
+<div>The name of the variable to contain the selected value.</div>
