--- a/src/main/resources/co/cloudify/jenkins/plugin/parameters/BlueprintSelectorParameterDefinition/help.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/parameters/BlueprintSelectorParameterDefinition/help.html
@@ -1,3 +1,1 @@
-<div>
-	Displays a dropdown list of Cloudify blueprints. You can also specify a filter.
-</div>
+<div>Displays a dropdown list of Cloudify blueprints. You can also specify a filter.</div>
