Support testing configuration once again

--- a/src/main/resources/co/cloudify/jenkins/plugin/CloudifyConfiguration/help-defaultTenant.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/CloudifyConfiguration/help-defaultTenant.html
@@ -1,3 +1,7 @@
 <div>
-	<p>The default Cloudify tenant to use.</p>
+	<p>
+		The default Cloudify tenant to use. If omitted,
+		<code>default_tenant</code>
+		is used.
+	</p>
 </div>
