Added missing help files

--- a/src/main/resources/co/cloudify/jenkins/plugin/integrations/ARMBuildStep/help-location.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/integrations/ARMBuildStep/help-location.html
@@ -1,3 +1,3 @@
 <div>
-	<p>The Azure location where the created resource group should reside in.</p>
+	<p>The Azure location where the created resource group should reside in. If omitted, the value of the <code>azure_default_location</code> Cloudify secret will be used.</p>
 </div>
