--- a/src/main/resources/co/cloudify/jenkins/plugin/integrations/ARMBuildStep/help-clientSecretAsString.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/integrations/ARMBuildStep/help-clientSecretAsString.html
@@ -1,3 +1,3 @@
 <div>
-	<p>Azure authentication data: client secret. Most likely, you'll want this to be equal to an environment variable.</p>
+	<p>Azure authentication data: client secret. If omitted, the value of the <code>azure_client_secret</code> Cloudify secret will be used.</p>
 </div>
