--- a/src/main/resources/co/cloudify/jenkins/plugin/integrations/ARMBuildStep/help-subscriptionId.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/integrations/ARMBuildStep/help-subscriptionId.html
@@ -1,3 +1,3 @@
 <div>
-	<p>Azure authentication data: subscription ID.</p>
+	<p>Azure authentication data: subscription ID. If omitted, the value of the <code>azure_subscription_id</code> Cloudify secret will be used.</p>
 </div>
