--- a/src/main/resources/co/cloudify/jenkins/plugin/integrations/ARMBuildStep/help-tenantId.html
+++ b/src/main/resources/co/cloudify/jenkins/plugin/integrations/ARMBuildStep/help-tenantId.html
@@ -1,3 +1,3 @@
 <div>
-	<p>Azure authentication data: tenant ID.</p>
+	<p>Azure authentication data: tenant ID. If omitted, the value of the <code>azure_tenant_id</code> Cloudify secret will be used.</p>
 </div>
